Fix some bugs caused by the refactor