@@ -4,7 +4,7 @@ import com.kevinguanchedarias.owgejava.builder.SyncHandlerBuilder;
 import com.kevinguanchedarias.owgejava.business.UnitTypeBo;
 import com.kevinguanchedarias.owgejava.entity.UserStorage;
 import com.kevinguanchedarias.owgejava.interfaces.SyncSource;
-import com.kevinguanchedarias.owgejava.repository.ObtainedUnitRepository;
+import com.kevinguanchedarias.owgejava.repository.UnitTypeRepository;
 import com.kevinguanchedarias.owgejava.repository.UserStorageRepository;
 import com.kevinguanchedarias.owgejava.responses.UnitTypeResponse;
 import com.kevinguanchedarias.owgejava.util.SpringRepositoryUtil;
@@ -16,7 +16,6 @@ import org.springframework.web.context.annotation.ApplicationScope;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("game/unitType")
@@ -26,8 +25,8 @@ public class UnitTypeRestService implements SyncSource {
 
     private final UserStorageRepository userStorageRepository;
 
-    private final ObtainedUnitRepository obtainedUnitRepository;
     private final UnitTypeBo unitTypeBo;
+    private final UnitTypeRepository unitTypeRepository;
 
     @Override
     public Map<String, Function<UserStorage, Object>> findSyncHandlers() {
@@ -36,16 +35,16 @@ public class UnitTypeRestService implements SyncSource {
 
     private List<UnitTypeResponse> loadData(UserStorage loggedUser) {
         var user = SpringRepositoryUtil.findByIdOrDie(userStorageRepository, loggedUser.getId());
-        return unitTypeBo.findAll().stream().map(current -> {
+        return unitTypeRepository.findAll().stream().map(current -> {
             var unitTypeResponse = new UnitTypeResponse();
             current.getSpeedImpactGroup().setRequirementGroups(null);
             unitTypeResponse.dtoFromEntity(current);
             unitTypeResponse.setComputedMaxCount(unitTypeBo.findUniTypeLimitByUser(user, current));
             if (unitTypeBo.hasMaxCount(user.getFaction(), current)) {
-                unitTypeResponse.setUserBuilt(obtainedUnitRepository.countByUserAndUnitType(user, current));
+                unitTypeResponse.setUserBuilt(unitTypeBo.countUnitsByUserAndUnitType(user, current));
             }
             unitTypeResponse.setUsed(unitTypeBo.isUsed(current.getId()));
             return unitTypeResponse;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 }
